serd (1.0.1) unstable;

  * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
  * Add SerdWorld for shared library state
  * Add option for writing terse output without newlines
  * Add support for xsd:float and xsd:double literals
  * Bring read/write interface closer to C standard
  * Make nodes opaque
  * Remove serd_uri_to_path()
  * Remove useless character counting from API
  * Rename SerdChunk to SerdStringView
  * Simplify streaming API and improve pretty printing
  * Simplify writer style options
  * Use a fixed-size reader stack
  * Use char* for strings in public API

 -- David Robillard <d@drobilla.net>  Wed, 13 Jan 2021 13:29:44 +0000

serd (0.30.11) unstable;

  * Fix writing long literals with triple quotes
  * Support combining several BSD-style command line flags in serdi
  * Write statements with invalid URI characters in lax mode

 -- David Robillard <d@drobilla.net>  Mon, 12 Apr 2021 01:15:27 +0000

serd (0.30.10) stable;

  * Add fallback configuration if documentation theme is unavailable
  * Fix SERD_DISABLE_DEPRECATED
  * Fix building for older MacOS versions on newer MacOS
  * Fix documentation installation directory

 -- David Robillard <d@drobilla.net>  Wed, 20 Jan 2021 15:55:35 +0000

serd (0.30.8) stable;

  * Deprecate serd_uri_to_path()
  * Don't install API man pages
  * Fix potential memory error when serialising URIs
  * Move headers to an include directory
  * Refuse to write relative URI references to NTriples
  * Remove the need for a generated configuration header
  * Remove use of C character class functions that may use locale
  * Split up and reorganize unit tests
  * Use aligned allocation via C11 or Windows API where possible

 -- David Robillard <d@drobilla.net>  Thu, 07 Jan 2021 21:19:36 +0000

serd (0.30.6) stable;

  * Fix various minor warnings and other code quality issues
  * Improve reader error handling
  * Make all free functions tolerant of NULL
  * Parse prefixed names more strictly
