@@ -13,6 +13,7 @@ unit_tests = [
   'read_chunk',
   'reader_writer',
   'string',
+  'terse_write',
   'uri',
 ]
 
@@ -146,6 +147,10 @@ if get_option('utils')
          timeout: 240)
   endforeach
 
+  test('terse', run_test_suite,
+       args: script_args + ['--osyntax', 'turtle', manifest, base_uri, '--', '-t'],
+       suite: ['rdf', 'serd'],
+       timeout: 240)
 
   ### Run the lax suite with lax parsing enabled as well
   manifest = files('lax/manifest.ttl')
